Added cause helpers to style guide

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -190,6 +190,7 @@ small {
 .nav {
     padding-left: 0;
     margin-bottom: 0;
+    margin-left: 0;
     list-style: none;
     display: inline-block;
 }
