--- a/app/templates/styleguide/templating.html
+++ b/app/templates/styleguide/templating.html
@@ -31,9 +31,9 @@
         <h3 class="scrollspy-section"><a id="base-layout"></a>Base Layout</h3>
         <p>All templates inherit their layout from <code>app/templates/base.html</code>. It includes standard <code>&lt;html&gt;</code>, <code>&lt;head&gt;</code> and <code>&lt;body&gt;</code> declarations that are recycled by every page. Within the <code>&lt;body&gt;</code> there are <code>&lt;div&gt;</code> blocks with <code>header</code>, <code>content</code> and <code>footer</code> classes that represent these sections of the page.</p>
         <ul>
-            <li><code>header</code> contains the fixed header containing a logo, site-wide navigation and login/logout buttons.</li>
-            <li><code>content</code> holds flashed messages, as well as main page content. So messages are displayed right below the <code>header</code> and below the <code>content</code>.</li>
-            <li><code>footer</code> contains the static footer with some quick links to important information and social media links.</li>
+            <li><code><strong>header</strong></code> contains the fixed header containing a logo, site-wide navigation and login/logout buttons.</li>
+            <li><code><strong>content</strong></code> holds flashed messages, as well as main page content. So messages are displayed right below <code>header</code> but above <code>content</code>.</li>
+            <li><code><strong>footer</strong></code> contains the static footer with some quick links to important information and social media links.</li>
         </ul>
         <p>There are 2 template blocks called <code>{&#37; block scripts &#37;}</code> and <code>{&#37; block content &#37;}</code>, which correspond to blocks declared in each individual page template. Details are  described below in the <a href="#basic-template">Basic Template</a> section.</p>
         <hr>
@@ -51,9 +51,9 @@
 {&#37; endblock &#37;}</pre>
         <p>Basically, it extends the <code>base.html</code> template and inserts anything from <code>{&#37; block scripts &#37;}</code> and <code>{&#37; block content &#37;}</code> into corresponding blocks in <code>base.html</code>.</p>
         <ul>
-            <li><code>{&#37; set active_page = "page_name" &#37;}</code> is usually used to tell navigation which page is currently active.</li>
-            <li><code>{&#37; block scripts &#37;}</code> should contain short scripts that are unique to this particular page, such as form validation.</li>
-            <li><code>{&#37; block content &#37;}</code> should contain the main page content.</li>
+            <li><code><strong>{&#37; set active_page = "page_name" &#37;}</strong></code> is usually used to tell <a href="#navigation-helpers">Navigation Helpers</a> which page is currently active.</li>
+            <li><code><strong>{&#37; block scripts &#37;}</strong></code> should contain short scripts that are unique to this particular page, such as form validation.</li>
+            <li><code><strong>{&#37; block content &#37;}</strong></code> should contain the main page content.</li>
         </ul>
         <hr>
 
@@ -62,29 +62,31 @@
         <dl>
             <dt><code><strong>render_cause_nav(active_section, new_updates, new_comments)</strong></code></dt>
             <dd>
-                <p><strong>Description:</strong> renders navigation for <em>cause</em> module</p>
-                <p><strong>Arguments:</strong>
-                    <ul>
-                        <li><code><strong>active_section</strong></code> : currently active section that gets an underline.</li>
-                        <li><code><strong>new_updates</strong></code> : number of new updates in the <em>Updates</em> section</li>
-                        <li><code><strong>new_comments</strong></code> : number of new comments in the <em>Comments</em> section</li>
-                    </ul>
-                </p>
+                <strong>Description:</strong><br>
+                Renders navigation for <em>cause</em> module.<br>
+                <br>
+                <strong>Arguments:</strong>
+                <ul>
+                    <li><code><strong>active_section</strong></code> : currently active section that gets an underline. Usually you would pass <code>active_page</code> Jija variable declared at the top of the <a href="#basic-template">template</a>.</li>
+                    <li><code><strong>new_updates</strong></code> : number of new updates in the <em>Updates</em> section</li>
+                    <li><code><strong>new_comments</strong></code> : number of new comments in the <em>Comments</em> section</li>
+                </ul>
             </dd>
             <dt><code><strong>render_styleguide_nav(active_section)</strong></code></dt>
             <dd>
-                <p><strong>Description:</strong> renders navigation for <em>styleguide</em> module</p>
-                <p><strong>Arguments:</strong>
-                    <ul>
-                        <li><code><strong>active_section</strong></code> : currently active section that gets an underline.</li>
-                    </ul>
-                </p>
+                <strong>Description:</strong><br>
+                Renders navigation for <em>styleguide</em> module.<br>
+                <br>
+                <strong>Arguments:</strong>
+                <ul>
+                    <li><code><strong>active_section</strong></code> : currently active section that gets an underline.</li>
+                </ul>
             </dd>
             <dt><code><strong>render_scrollspy()</strong></code></dt>
             <dd>
-            <p><strong>Description:</strong> this menu is populated automatically by <a href="{{ url_for('static', filename='js/scroll-spy.js') }}" target="_blank"><code>app/static/js/scroll-spy.js</code></a> script. If you are going to use this navigation macro, don't forget to include it in <code>{&#37; block scripts &#37;}</code> like so: <pre>&lt;script type="text/javascript" src="{&#123; url_for('static', filename='js/scroll-spy.js') &#125;}"&gt;&lt;/script&gt;</pre>
+                <strong>Description:</strong><br>
+                This menu is populated automatically by <a href="{{ url_for('static', filename='js/scroll-spy.js') }}" target="_blank"><code>app/static/js/scroll-spy.js</code></a> script. If you are going to use this navigation macro, don't forget to include it in <code>{&#37; block scripts &#37;}</code> like so: <pre>&lt;script type="text/javascript" src="{&#123; url_for('static', filename='js/scroll-spy.js') &#125;}"&gt;&lt;/script&gt;</pre>
                 Each section of a page that needs to appear in this menu needs to have the following markup: <pre>&lt;h3 class="scrollspy-section"&gt;&lt;a id="some-section-id"&gt;&lt;/a&gt;Some Section&lt;/h3&gt;</pre>
-            </p>
             </dd>
         </dl>
         <hr>
@@ -110,7 +112,7 @@ from app.module_name.forms import YourForm
 def some_view():
     form = YourForm()
     return render_template('module_name/template.html', form=form)</pre>
-        <p>The template file that uses the form should have something like the follow in its <code>{&#37; block content &#37;}</code>:</p>
+        <p>The template file that uses the form should have something like the following in its <code>{&#37; block content &#37;}</code>:</p>
         <pre>
 &#123;&#37; block content &#37;&#125;
 
@@ -135,31 +137,81 @@ def some_view():
         <dl>
             <dt><code><strong>render_boolean(bool)</strong></code></dt>
             <dd>
-            <p><strong>Description:</strong> renders <a href="http://localhost:5000/styleguide/forms#bool-checkbox">Bool Checkbox</a></p>
-                <p><strong>Arguments:</strong></p>
+                <strong>Description:</strong><br>
+                Renders <a href="http://localhost:5000/styleguide/forms#bool-checkbox">Bool Checkbox</a>
+                <br><br>
+                <strong>Arguments:</strong>
                 <ul>
                     <li><code><strong>bool</strong></code> : takes a WTForms <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.BooleanField" target="_blank"><code>BooleanField()</code></a>, which is usually defined in the <code>forms.py</code> file of a module.</li>
                 </ul>
             </dd>
             <dt><code><strong>render_radio(radio)</strong></code></dt>
             <dd>
-                <p><strong>Description:</strong> renders a standard radio button section.</p>
-                <p><strong>Arguments:</strong>
+                <strong>Description:</strong><br> 
+                Renders a standard radio button section.
+                <br><br>
+                <strong>Arguments:</strong>
                 <ul>
                     <li><code><strong>radio</strong></code> : takes a WTForms <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.RadioField" target="_blank"><code>RadioField()</code></a>, which is usually defined in the <code>forms.py</code> file of a module.</li>
                 </ul>
-                </p>
             </dd>
             <dt><code><strong>render_field(field, label, flags)</strong></code></dt>
             <dd>
-            <p><strong>Description:</strong> renders most other fields, including <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.StringField" target="_blank"><code>StringField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.PasswordField"><code>PasswordField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.HiddenField"><code>HiddenField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.TextAreaField"><code>TextAreaField()</code></a>, etc. A full list of possible fields can be fround <a href="http://wtforms.readthedocs.org/en/latest/fields.html" target="_blank">here</a>.</p>
-                <p><strong>Arguments:</strong>
+                <strong>Description:</strong><br>
+                Renders most other fields like <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.StringField" target="_blank"><code>StringField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.PasswordField"><code>PasswordField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.HiddenField"><code>HiddenField()</code></a>, <a href="http://wtforms.readthedocs.org/en/latest/fields.html#wtforms.fields.TextAreaField"><code>TextAreaField()</code></a>, etc. A full list of possible fields can be fround <a href="http://wtforms.readthedocs.org/en/latest/fields.html" target="_blank">here</a>.
+                <br><br>
+                <strong>Arguments:</strong>
                 <ul>
                     <li><code><strong>field</strong></code> : any of the fields availabe <a href="http://wtforms.readthedocs.org/en/latest/fields.html" taget="_blank">here</a>, except the <code>RadioField()</code>, for which you should use the <code>render_radio()</code> macro.</li>
                     <li><code><strong>label</strong></code> : pass the form label to this, usually it would look something like <code>form.field_name.label</code>.</li>
                     <li><code><strong>flags</strong></code> : pass all the form flags to this, usually it would look something like <code>form.field_name.flags</code>. If there's a <em>required</em> flag set, the label will automatically get an asterisk next to it.</li>
                 </ul>
-                </p>
+            </dd>
+        </dl>
+        <hr>
+
+        <h3 class="scrollspy-section"><a id="cause-helpers"></a>Cause Helpers</h3>
+        <p>These helpers are useful for generating cause layout. This is section will probably be constantly changing during development.</p>
+        <p>Currently available macros are:</p>
+        <dl>
+            <dt><code><strong>render_cause_info(caption, info)</strong></code></dt>
+            <dd>
+                <strong>Description:</strong><br>
+                Render static, non-interactive info.
+                <br><br>
+                <strong>Arguments:</strong>
+                <ul>
+                    <li><code><strong>caption</strong></code> : alphanumeric caption that will appear at the top.</li>
+                    <li><code><strong>info</strong></code> : info to be displayed, usually it would be something from the <em>cause</em> object.</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl>
+            <dt><code><strong>render_cause_stat(caption, stat, users_contributing, more_url)</strong></code></dt>
+            <dd>
+                <strong>Description:</strong><br>
+                Render a cause statistic and users contributing to that satistic. Usually used for counters, like the ones that display creator or supporters.
+                <br><br>
+                <strong>Arguments:</strong>
+                <ul>
+                    <li><code><strong>caption</strong></code> : alphanumeric caption that will appear at the top.</li>
+                    <li><code><strong>stat</strong></code> : a number for this stat.</li>
+                    <li><code><strong>users_contributing</strong></code> : a list of users contributing to this stat.</li>
+                    <li><code><strong>more_url</strong></code> : a URL to a view of all the users contributing to this stat.</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl>
+            <dt><code><strong>render_cause_support_actions(caption, actions)</strong></code></dt>
+            <dd>
+                <strong>Description:</strong><br>
+                Render support actions inside boxes. Each box includes a title, a brief explanation and some stats.
+                <br><br>
+                <strong>Arguments:</strong>
+                <ul>
+                    <li><code><strong>caption</strong></code> : alphanumeric caption that will appear at the top of the whole section.</li>
+                    <li><code><strong>actions</strong></code> : a list of action objects passed from the view.</li>
+                </ul>
             </dd>
         </dl>
     </div>
