--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -288,7 +288,7 @@ $(document).ready(function() {
             </div>
         </div>   
         <pre>
-&lt;script type="text/javascript" src="{&#123; url_for('static', filename="js/jquery.form-validator.min") &#125;}"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="{&#123; url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') &#125;}"&gt;&lt;/script&gt;
 &lt;script&gt;
 $(document).ready(function() {
     $.validate({
