--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -47,7 +47,7 @@ $(document).ready(function() {
         <div class="row">
             <fieldset>
                 <div class="three columns offset-by-three">
-                    <input id="login" class="button button-primary u-mobile-fixed-bottom" type="submit" value="Login">
+                    <input id="login" class="button button-primary u-mobile-fixed-bottom" type="submit" value="Log In">
                 </div>
                 <div class="three columns">
                     {{ render_boolean(form.remember) }}
@@ -55,4 +55,9 @@ $(document).ready(function() {
             </fieldset>
         </div>
     </form>
+    <div class="row">
+        <div class="six columns offset-by-three">
+            <a href="{{ url_for('github.login') }}" class="button">Log In with GitHub</a>
+        </div>
+    </div>
 {% endblock %}
