Make render_cause_nav better

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -18,7 +18,7 @@
 <hr class="u-remove-margin-bottom">
 <div class="row">
     <div class="twelve columns">
-        {{ render_cause_nav(active_page, 3, 5) }}
+        {{ render_cause_nav(active_page, cause) }}
     </div>
 </div>
 <div class="row u-add-margin-top">
