--- a/app/templates/styleguide/templating.html
+++ b/app/templates/styleguide/templating.html
@@ -60,16 +60,24 @@
         <h3 class="scrollspy-section"><a id="navigation-helpers"></a>Navigation Helpers</h3>
         <p>Navigation helpers are located in <code>app/templates/helpers/navigation.html</code> file. Currently available macros are:</p>
         <dl>
-            <dt><code><strong>render_cause_nav(active_section, new_updates, new_comments)</strong></code></dt>
+            <dt><code><strong>render_cause_nav(active_section, cause)</strong></code></dt>
             <dd>
                 <strong>Description:</strong><br>
                 Renders navigation for <em>cause</em> module.<br>
                 <br>
                 <strong>Arguments:</strong>
                 <ul>
-                    <li><code><strong>active_section</strong></code> : currently active section that gets an underline. Usually you would pass <code>active_page</code> Jija variable declared at the top of the <a href="#basic-template">template</a>.</li>
-                    <li><code><strong>new_updates</strong></code> : number of new updates in the <em>Updates</em> section</li>
-                    <li><code><strong>new_comments</strong></code> : number of new comments in the <em>Comments</em> section</li>
+                    <li>
+                        <code><strong>active_section</strong></code> :
+                        currently-active section that gets an underline. Usually
+                        you would pass <code>active_page</code> Jinja variable
+                        declared at the top of the <a
+                            href="#basic-template">template</a>.
+                    </li>
+                    <li>
+                        <code><strong>cause</strong></code> :
+                        <code>Cause</code>, for generating links
+                    </li>
                 </ul>
             </dd>
             <dt><code><strong>render_styleguide_nav(active_section)</strong></code></dt>
