--- a/app/templates/discussions/comment_form.html
+++ b/app/templates/discussions/comment_form.html
@@ -1,38 +1,25 @@
-{% extends "base.html" %}
-{% set active_page = "comments" %}
-
-{% block scripts %}
-<script type="text/javascript" src="{{ url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') }}"></script>
-<script>
-$(document).ready(function() {
-    $.validate({
-        form : '#comment',
-        errorMessageClass : 'danger'
-    });
-});
-</script>   
-{% endblock %}
+{% extends "base_form.html" %}
 
 {% block content %}
-    {% from "helpers/forms.html" import render_field, render_boolean, render_f %}
-    <form id="comment" name="comment" action="" method="post">
-        {{ form.hidden_tag() }}
-        <div class="row">
-            <fieldset>
-                <div class="six columns offset-by-three">
-                    {{ render_f(form.body, "u-full-width")  }}
-                </div>
-            </fieldset>
-        </div>
-        <div class="row">
-            <fieldset>
-                <div class="three columns offset-by-three">
-                    <input id="post" type="submit" value="Post"
-                        class="button button-primary u-mobile-fixed-bottom">
-                </div>
-                <div class="three columns">
-                </div>
-            </fieldset>
-        </div>
-    </form>
+{% from "helpers/forms.html" import render_field, render_boolean, render_f %}
+<form id="comment" name="comment" action="" method="post">
+    {{ form.hidden_tag() }}
+    <div class="row">
+        <fieldset>
+            <div class="six columns offset-by-three">
+                {{ render_f(form.body, "u-full-width")  }}
+            </div>
+        </fieldset>
+    </div>
+    <div class="row">
+        <fieldset>
+            <div class="three columns offset-by-three">
+                <input id="post" type="submit" value="Post"
+                    class="button button-primary u-mobile-fixed-bottom">
+            </div>
+            <div class="three columns">
+            </div>
+        </fieldset>
+    </div>
+</form>
 {% endblock %}
