--- a/app/templates/discussions/post_list.html
+++ b/app/templates/discussions/post_list.html
@@ -20,36 +20,34 @@
 </div>
 
 <div class="row">
-    <div class="eight columns">
-	{% for post in posts %}
-	<div class="post">
-	    <img class="icon-comment u-pull-left" src="{{ url_for('static', filename='open-iconic/svg/pulse.svg') }}"> 
-	    <h4>
-		<a href="{{ url_for('discussions.post_detail', slug=cause.slug, pk=post.id) }}">
-		    {{ post.title }}
-		</a>
-	    </h4>
-	    <article>{{ post.body|markdown }}</article>
-	    <p>
-		<img class="icon" src="{{ url_for('static', filename='open-iconic/svg/comment-square.svg') }}"> 
-		{{ post.comments.count() }}
-		comments. 
-		<a href="{{ url_for('discussions.comment_add', slug=cause.slug, pk=post.id) }}">
-		    Reply
-		</a>
-	    </p>
-	    <p>
-		<img class="icon" src="{{ url_for('static', filename='open-iconic/svg/person.svg') }}"> 
-		<em>{{ post.author.nickname }}, {{ post.created_on.strftime('%b. %d, %Y') }}</em>
-		{% if post.author == current_user %}
-		<a href="{{ url_for('discussions.post_edit', slug=cause.slug, pk=post.id) }}">
-		    edit
-		</a>
-		{% endif %}
-	    </p>
-	    <hr>
-	</div>
-	{% endfor %}
+    {% for post in posts %}
+    <div class="post eight columns offset-by-two">
+	<img class="icon-comment u-pull-left" src="{{ url_for('static', filename='open-iconic/svg/pulse.svg') }}"> 
+	<h4>
+	    <a href="{{ url_for('discussions.post_detail', slug=cause.slug, pk=post.id) }}">
+		{{ post.title }}
+	    </a>
+	    {% if post.author == current_user %}
+	    <a href="{{ url_for('discussions.post_edit', slug=cause.slug, pk=post.id) }}">
+		(edit)
+	    </a>
+	    {% endif %}
+	</h4>
+	<article>{{ post.body|markdown }}</article>
+	<p class="u-pull-right">
+	    <img class="icon" src="{{ url_for('static', filename='open-iconic/svg/person.svg') }}"> 
+	    <em>{{ post.author.nickname }}, {{ post.created_on.strftime('%b. %d, %Y') }}</em>
+	</p>
+	<p>
+	    <img class="icon" src="{{ url_for('static', filename='open-iconic/svg/comment-square.svg') }}"> 
+	    {{ post.comments.count() }}
+	    comments. 
+	    <a href="{{ url_for('discussions.comment_add', slug=cause.slug, pk=post.id) }}">
+		Reply
+	    </a>
+	</p>
+	<hr>
     </div>
+    {% endfor %}
 </div>
 {% endblock %}
