--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -92,6 +92,7 @@ small {
 .avatar-sm {
     border-radius: 33%;
     display:inline-block;
+    vertical-align: middle;
     width:32px; 
     height:32px; 
     background-color:#ccc; 
