Added google OAuth login

--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -58,10 +58,10 @@ $(document).ready(function() {
     <hr>
     <div class="row">
         <div class="three columns offset-by-three">
-            <a href="{{ url_for('github.login') }}" class="button u-full-width">Log In with GitHub</a>
+            <a href="{{ url_for('twitter.login') }}" class="button u-full-width">Log In with Twitter</a>
         </div>
         <div class="three columns">
-            <a href="{{ url_for('twitter.login') }}" class="button u-full-width">Log In with Twitter</a>
+            <a href="{{ url_for('google.login') }}" class="button u-full-width">Log In with Google</a>
         </div>
     </div>
 {% endblock %}
